--- a/main2.css
+++ b/main2.css
@@ -22,10 +22,11 @@ body {
     background-size: cover;
     position: fixed;
     top: 0;
+    left: 0;
     height: 100vh;
     width: calc(100% - 17px);
     filter: blur(13px);
-    transform: scale(1.2);
+    transform: scale(1.1);
     z-index: -1;
 }
 
